actualizacion config swagger