@@ -3,12 +3,13 @@ package com.tutorial.gatewayservice.filter;
 import org.springframework.http.server.reactive.ServerHttpRequest;
 import org.springframework.stereotype.Component;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.function.Predicate;
 
 @Component
 public class RouteValidator {
-    public static final List<String> openApiEndpoints = List.of(
+    public static final List<String> openApiEndpoints = Arrays.asList(
             "/auth/register",
             "/auth/token",
             "/eureka",
@@ -26,7 +27,8 @@ public class RouteValidator {
             "/swagger-resources/configuration/ui",
             "/swagger-resources/configuration/security",
             "/csrf",
-            "/telecom-cedia/api/administracion/swagger-ui/**"
+            "/telecom-cedia/api/administracion/swagger-ui/**",
+            "/**/swagger-ui/**"
     );
 
     public Predicate<ServerHttpRequest> isSecured =
